--- a/drain/hugo.toml
+++ b/drain/hugo.toml
@@ -3,7 +3,7 @@ baseURL = 'https://drain.at'
 # This is a "one page"-website, so we do not need these kinds of pages...
 disableKinds = ["section", "taxonomy", "term", "RSS", "robotsTXT"]
 
-defaultContentLanguage = "en"
+defaultContentLanguage = "de"
 
 # The name of this wonderful theme ;-).
 theme = "hugo-scroll"
